--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "scripts": {
-        "start": "php -S localhost:3000 -t public"
+        "start": "php -S localhost:3000 -t public",
+        "start-websocket": "php app/web_server.php"
     },
     "require": {
         "cboden/ratchet": "^0.4.4",
