--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,14 @@
     ],
     "scripts": {
         "start": "php -S localhost:3000 -t public",
-        "start-websocket": "php app/web_server.php"
+        "start-websocket": "php app/web_server.php",
+        "format": "set PHP_CS_FIXER_IGNORE_ENV=1 && php-cs-fixer fix --allow-risky=yes"
     },
     "require": {
         "cboden/ratchet": "^0.4.4",
         "vlucas/phpdotenv": "^5.6"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.72"
     }
 }
