--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     },
     "require": {
         "cboden/ratchet": "^0.4.4",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "spatie/pdf-to-text": "^1.54",
+        "smalot/pdfparser": "^2.11"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.72"
