--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "cboden/ratchet": "^0.4.4",
         "vlucas/phpdotenv": "^5.6",
         "spatie/pdf-to-text": "^1.54",
-        "smalot/pdfparser": "^2.11"
+        "smalot/pdfparser": "^2.11",
+        "guzzlehttp/guzzle": "^7.9"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.72"
