--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "scripts": {
         "setup": "composer install && npm install",
-        "start:php": "php -d upload_max_filesize=15M -d post_max_size=15M -S localhost:3000 -t public && php app/web_server.php",
+        "start:php": "php -d extension=php_openssl.dll -d extension=php_sockets.dll -d extension=php_curl.dll -d extension=php_mbstring.dll -d extension=php_pdo_mysql.dll -d upload_max_filesize=15M -d post_max_size=15M -S localhost:3000 -t public",
         "start:websocket": "php app/web_server.php",
         "dev": "concurrently \"composer start:php\" \"composer start:websocket\""
     },
